# testbench-sardine

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RELEASE.md  Taskfile.yaml  justatest.txt  pyproject.toml  query.graphql  script.bash
.github/workflows/: ci.yaml  codeql.yaml  lint-pr-title.yaml  pre-commit.yaml  release.yaml  testpypi.yaml
assets/: gh-category.graphql  mutation.graphql
devel/: poetry.md  pre-commit.md  task.md
docs/devel/: pre-commit.md
src/testbench_sardine/: main.py  utils.py
tests/: test_main.py  test_utils.py
