[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testbench-sardine"
version = "1.0.2"
description = "Personal testbench for trying out stuff."
authors = ["Tim Schwenke <tim@trallnag.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trallnag/testbench-sardine"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
requests = "^2.28.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
httpx = "^0.23.3"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
